// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<IconStar /> DOM element add "id" attribute to DOM element 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c"
    height="1em"
    id="hasId"
    viewBox="0 0 256 256"
    width="1em"
  >
     
    <path
      d="M128.9 203.6l-60.4 33.2c-1.1.6-2.2 1-3.1 1.3-.8.3-1.6.5-2.2.5-2.4 0-4-.8-4.8-2.6-.8-1.8-1.1-4.2-.8-7.4l11.9-70.5-49.1-49.9c-2.9-3.2-4.1-6-3.3-8.6.8-2.4 3.1-4 7.3-4.6l67.8-10.5 30.1-64.4c.8-1.8 1.9-3.1 3.1-4.1 1.1-1 2.5-1 3.6-1"
      fill="currentColor"
    />
     
    <path
      d="M128 204l61.3 32.9c1.2.6 2.3 1 3.1 1.3.8.3 1.8.5 2.6.5 2 0 3.5-.8 4.3-2.6.8-1.8 1.1-4.2.8-7.4l-11.9-70.4 49.1-49.9c2.9-3.2 4.1-6.1 3.3-8.6-.8-2.4-3.2-4-7.3-4.6l-67.9-10.5-30.1-64.4c-.9-1.7-2-3.1-3.1-4.1-1.1-1-3.2-1-4.4-1"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconStar /> DOM element add "id" attribute to DOM element 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}"`;

exports[`<IconStar /> DOM element add "onClick" attribute to DOM element 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c"
    height="1em"
    id={[Function]}
    viewBox="0 0 256 256"
    width="1em"
  >
     
    <path
      d="M128.9 203.6l-60.4 33.2c-1.1.6-2.2 1-3.1 1.3-.8.3-1.6.5-2.2.5-2.4 0-4-.8-4.8-2.6-.8-1.8-1.1-4.2-.8-7.4l11.9-70.5-49.1-49.9c-2.9-3.2-4.1-6-3.3-8.6.8-2.4 3.1-4 7.3-4.6l67.8-10.5 30.1-64.4c.8-1.8 1.9-3.1 3.1-4.1 1.1-1 2.5-1 3.6-1"
      fill="currentColor"
    />
     
    <path
      d="M128 204l61.3 32.9c1.2.6 2.3 1 3.1 1.3.8.3 1.8.5 2.6.5 2 0 3.5-.8 4.3-2.6.8-1.8 1.1-4.2.8-7.4l-11.9-70.4 49.1-49.9c2.9-3.2 4.1-6.1 3.3-8.6-.8-2.4-3.2-4-7.3-4.6l-67.9-10.5-30.1-64.4c-.9-1.7-2-3.1-3.1-4.1-1.1-1-3.2-1-4.4-1"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconStar /> DOM element add "onClick" attribute to DOM element 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}"`;

exports[`<IconStar /> DOM element pass attributes defined in the "attrs" prop to the DOM element 1`] = `
<div>
  <svg
    aria-hidden={true}
    className="htz-a htz-b htz-c"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
     
    <path
      d="M128.9 203.6l-60.4 33.2c-1.1.6-2.2 1-3.1 1.3-.8.3-1.6.5-2.2.5-2.4 0-4-.8-4.8-2.6-.8-1.8-1.1-4.2-.8-7.4l11.9-70.5-49.1-49.9c-2.9-3.2-4.1-6-3.3-8.6.8-2.4 3.1-4 7.3-4.6l67.8-10.5 30.1-64.4c.8-1.8 1.9-3.1 3.1-4.1 1.1-1 2.5-1 3.6-1"
      fill="currentColor"
    />
     
    <path
      d="M128 204l61.3 32.9c1.2.6 2.3 1 3.1 1.3.8.3 1.8.5 2.6.5 2 0 3.5-.8 4.3-2.6.8-1.8 1.1-4.2.8-7.4l-11.9-70.4 49.1-49.9c2.9-3.2 4.1-6.1 3.3-8.6-.8-2.4-3.2-4-7.3-4.6l-67.9-10.5-30.1-64.4c-.9-1.7-2-3.1-3.1-4.1-1.1-1-3.2-1-4.4-1"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconStar /> DOM element pass attributes defined in the "attrs" prop to the DOM element 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}"`;

exports[`<IconStar /> DOM element render correctly when no props are passed 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
     
    <path
      d="M128.9 203.6l-60.4 33.2c-1.1.6-2.2 1-3.1 1.3-.8.3-1.6.5-2.2.5-2.4 0-4-.8-4.8-2.6-.8-1.8-1.1-4.2-.8-7.4l11.9-70.5-49.1-49.9c-2.9-3.2-4.1-6-3.3-8.6.8-2.4 3.1-4 7.3-4.6l67.8-10.5 30.1-64.4c.8-1.8 1.9-3.1 3.1-4.1 1.1-1 2.5-1 3.6-1"
      fill="currentColor"
    />
     
    <path
      d="M128 204l61.3 32.9c1.2.6 2.3 1 3.1 1.3.8.3 1.8.5 2.6.5 2 0 3.5-.8 4.3-2.6.8-1.8 1.1-4.2.8-7.4l-11.9-70.4 49.1-49.9c2.9-3.2 4.1-6.1 3.3-8.6-.8-2.4-3.2-4-7.3-4.6l-67.9-10.5-30.1-64.4c-.9-1.7-2-3.1-3.1-4.1-1.1-1-3.2-1-4.4-1"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconStar /> DOM element render correctly when no props are passed 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}"`;

exports[`<IconStar /> styles responsively set misc styles on an icon 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c htz-d htz-e"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
     
    <path
      d="M128.9 203.6l-60.4 33.2c-1.1.6-2.2 1-3.1 1.3-.8.3-1.6.5-2.2.5-2.4 0-4-.8-4.8-2.6-.8-1.8-1.1-4.2-.8-7.4l11.9-70.5-49.1-49.9c-2.9-3.2-4.1-6-3.3-8.6.8-2.4 3.1-4 7.3-4.6l67.8-10.5 30.1-64.4c.8-1.8 1.9-3.1 3.1-4.1 1.1-1 2.5-1 3.6-1"
      fill="currentColor"
    />
     
    <path
      d="M128 204l61.3 32.9c1.2.6 2.3 1 3.1 1.3.8.3 1.8.5 2.6.5 2 0 3.5-.8 4.3-2.6.8-1.8 1.1-4.2.8-7.4l-11.9-70.4 49.1-49.9c2.9-3.2 4.1-6.1 3.3-8.6-.8-2.4-3.2-4-7.3-4.6l-67.9-10.5-30.1-64.4c-.9-1.7-2-3.1-3.1-4.1-1.1-1-3.2-1-4.4-1"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconStar /> styles responsively set misc styles on an icon 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}@media (max-width: 79.9375em){.htz-d{position:relative}}@media (min-width: 80em){.htz-e{position:static}}"`;

exports[`<IconStar /> styles set icon's color 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
     
    <path
      d="M128.9 203.6l-60.4 33.2c-1.1.6-2.2 1-3.1 1.3-.8.3-1.6.5-2.2.5-2.4 0-4-.8-4.8-2.6-.8-1.8-1.1-4.2-.8-7.4l11.9-70.5-49.1-49.9c-2.9-3.2-4.1-6-3.3-8.6.8-2.4 3.1-4 7.3-4.6l67.8-10.5 30.1-64.4c.8-1.8 1.9-3.1 3.1-4.1 1.1-1 2.5-1 3.6-1"
      fill="currentColor"
    />
     
    <path
      d="M128 204l61.3 32.9c1.2.6 2.3 1 3.1 1.3.8.3 1.8.5 2.6.5 2 0 3.5-.8 4.3-2.6.8-1.8 1.1-4.2.8-7.4l-11.9-70.4 49.1-49.9c2.9-3.2 4.1-6.1 3.3-8.6-.8-2.4-3.2-4-7.3-4.6l-67.9-10.5-30.1-64.4c-.9-1.7-2-3.1-3.1-4.1-1.1-1-3.2-1-4.4-1"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconStar /> styles set icon's color 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:#0B7EB5}.htz-c{fill:#FFF}"`;

exports[`<IconStar /> styles set icon's color responsively 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c htz-d"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
     
    <path
      d="M128.9 203.6l-60.4 33.2c-1.1.6-2.2 1-3.1 1.3-.8.3-1.6.5-2.2.5-2.4 0-4-.8-4.8-2.6-.8-1.8-1.1-4.2-.8-7.4l11.9-70.5-49.1-49.9c-2.9-3.2-4.1-6-3.3-8.6.8-2.4 3.1-4 7.3-4.6l67.8-10.5 30.1-64.4c.8-1.8 1.9-3.1 3.1-4.1 1.1-1 2.5-1 3.6-1"
      fill="currentColor"
    />
     
    <path
      d="M128 204l61.3 32.9c1.2.6 2.3 1 3.1 1.3.8.3 1.8.5 2.6.5 2 0 3.5-.8 4.3-2.6.8-1.8 1.1-4.2.8-7.4l-11.9-70.4 49.1-49.9c2.9-3.2 4.1-6.1 3.3-8.6-.8-2.4-3.2-4-7.3-4.6l-67.9-10.5-30.1-64.4c-.9-1.7-2-3.1-3.1-4.1-1.1-1-3.2-1-4.4-1"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconStar /> styles set icon's color responsively 2`] = `".htz-a{vertical-align:-0.15em}.htz-d{fill:#FFF}@media (max-width: 79.9375em){.htz-b{color:#0B7EB5}}@media (min-width: 80em){.htz-c{color:#2D2D2D}}"`;

exports[`<IconStar /> styles set icon's fill 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
     
    <path
      d="M128.9 203.6l-60.4 33.2c-1.1.6-2.2 1-3.1 1.3-.8.3-1.6.5-2.2.5-2.4 0-4-.8-4.8-2.6-.8-1.8-1.1-4.2-.8-7.4l11.9-70.5-49.1-49.9c-2.9-3.2-4.1-6-3.3-8.6.8-2.4 3.1-4 7.3-4.6l67.8-10.5 30.1-64.4c.8-1.8 1.9-3.1 3.1-4.1 1.1-1 2.5-1 3.6-1"
      fill="currentColor"
    />
     
    <path
      d="M128 204l61.3 32.9c1.2.6 2.3 1 3.1 1.3.8.3 1.8.5 2.6.5 2 0 3.5-.8 4.3-2.6.8-1.8 1.1-4.2.8-7.4l-11.9-70.4 49.1-49.9c2.9-3.2 4.1-6.1 3.3-8.6-.8-2.4-3.2-4-7.3-4.6l-67.9-10.5-30.1-64.4c-.9-1.7-2-3.1-3.1-4.1-1.1-1-3.2-1-4.4-1"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconStar /> styles set icon's fill 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#0B7EB5}"`;

exports[`<IconStar /> styles set icon's fill responsively 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c htz-d"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
     
    <path
      d="M128.9 203.6l-60.4 33.2c-1.1.6-2.2 1-3.1 1.3-.8.3-1.6.5-2.2.5-2.4 0-4-.8-4.8-2.6-.8-1.8-1.1-4.2-.8-7.4l11.9-70.5-49.1-49.9c-2.9-3.2-4.1-6-3.3-8.6.8-2.4 3.1-4 7.3-4.6l67.8-10.5 30.1-64.4c.8-1.8 1.9-3.1 3.1-4.1 1.1-1 2.5-1 3.6-1"
      fill="currentColor"
    />
     
    <path
      d="M128 204l61.3 32.9c1.2.6 2.3 1 3.1 1.3.8.3 1.8.5 2.6.5 2 0 3.5-.8 4.3-2.6.8-1.8 1.1-4.2.8-7.4l-11.9-70.4 49.1-49.9c2.9-3.2 4.1-6.1 3.3-8.6-.8-2.4-3.2-4-7.3-4.6l-67.9-10.5-30.1-64.4c-.9-1.7-2-3.1-3.1-4.1-1.1-1-3.2-1-4.4-1"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconStar /> styles set icon's fill responsively 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}@media (max-width: 79.9375em){.htz-c{fill:#0B7EB5}}@media (min-width: 80em){.htz-d{fill:#2D2D2D}}"`;

exports[`<IconStar /> styles set icon's size 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c htz-d"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
     
    <path
      d="M128.9 203.6l-60.4 33.2c-1.1.6-2.2 1-3.1 1.3-.8.3-1.6.5-2.2.5-2.4 0-4-.8-4.8-2.6-.8-1.8-1.1-4.2-.8-7.4l11.9-70.5-49.1-49.9c-2.9-3.2-4.1-6-3.3-8.6.8-2.4 3.1-4 7.3-4.6l67.8-10.5 30.1-64.4c.8-1.8 1.9-3.1 3.1-4.1 1.1-1 2.5-1 3.6-1"
      fill="currentColor"
    />
     
    <path
      d="M128 204l61.3 32.9c1.2.6 2.3 1 3.1 1.3.8.3 1.8.5 2.6.5 2 0 3.5-.8 4.3-2.6.8-1.8 1.1-4.2.8-7.4l-11.9-70.4 49.1-49.9c2.9-3.2 4.1-6.1 3.3-8.6-.8-2.4-3.2-4-7.3-4.6l-67.9-10.5-30.1-64.4c-.9-1.7-2-3.1-3.1-4.1-1.1-1-3.2-1-4.4-1"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconStar /> styles set icon's size 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}.htz-d{font-size:6rem}"`;

exports[`<IconStar /> styles set icon's size responsively 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c htz-d htz-e"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
     
    <path
      d="M128.9 203.6l-60.4 33.2c-1.1.6-2.2 1-3.1 1.3-.8.3-1.6.5-2.2.5-2.4 0-4-.8-4.8-2.6-.8-1.8-1.1-4.2-.8-7.4l11.9-70.5-49.1-49.9c-2.9-3.2-4.1-6-3.3-8.6.8-2.4 3.1-4 7.3-4.6l67.8-10.5 30.1-64.4c.8-1.8 1.9-3.1 3.1-4.1 1.1-1 2.5-1 3.6-1"
      fill="currentColor"
    />
     
    <path
      d="M128 204l61.3 32.9c1.2.6 2.3 1 3.1 1.3.8.3 1.8.5 2.6.5 2 0 3.5-.8 4.3-2.6.8-1.8 1.1-4.2.8-7.4l-11.9-70.4 49.1-49.9c2.9-3.2 4.1-6.1 3.3-8.6-.8-2.4-3.2-4-7.3-4.6l-67.9-10.5-30.1-64.4c-.9-1.7-2-3.1-3.1-4.1-1.1-1-3.2-1-4.4-1"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconStar /> styles set icon's size responsively 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}@media (max-width: 79.9375em){.htz-d{font-size:6rem}}@media (min-width: 80em){.htz-e{font-size:7rem}}"`;

exports[`<IconStar /> styles set misc styles on an icon 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c htz-d"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
     
    <path
      d="M128.9 203.6l-60.4 33.2c-1.1.6-2.2 1-3.1 1.3-.8.3-1.6.5-2.2.5-2.4 0-4-.8-4.8-2.6-.8-1.8-1.1-4.2-.8-7.4l11.9-70.5-49.1-49.9c-2.9-3.2-4.1-6-3.3-8.6.8-2.4 3.1-4 7.3-4.6l67.8-10.5 30.1-64.4c.8-1.8 1.9-3.1 3.1-4.1 1.1-1 2.5-1 3.6-1"
      fill="currentColor"
    />
     
    <path
      d="M128 204l61.3 32.9c1.2.6 2.3 1 3.1 1.3.8.3 1.8.5 2.6.5 2 0 3.5-.8 4.3-2.6.8-1.8 1.1-4.2.8-7.4l-11.9-70.4 49.1-49.9c2.9-3.2 4.1-6.1 3.3-8.6-.8-2.4-3.2-4-7.3-4.6l-67.9-10.5-30.1-64.4c-.9-1.7-2-3.1-3.1-4.1-1.1-1-3.2-1-4.4-1"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconStar /> styles set misc styles on an icon 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}.htz-d{position:relative}"`;
